--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -59,6 +59,10 @@ headerHeight && (style["--header-height"] = headerHeight + "px");
     <meta name="revision" content={git.long("./")} />
     <link rel="icon" href={favicon} type={faviconType} />
     <link rel="apple-touch-icon" sizes="180x180" href={appleTouchIcon} />
+    <link
+      rel="stylesheet"
+      href="//fast.fonts.net/cssapi/828d1fd7-e4e9-4173-89e6-afe7cda46a8e.css"
+    />
     <title>{pageTitle}</title>
     <ViewTransitions />
   </head>
