--- a/src/components/layout/columns/columns.astro
+++ b/src/components/layout/columns/columns.astro
@@ -176,7 +176,7 @@ let items = layoutBlocks.length ? layoutBlocks : contentBlocks;
   div.columns {
     gap: var(--column-gap);
     // padding: calc(var(--indent) * 0.5) var(--indent);
-    padding: var(--indent);
+    padding: calc(var(--indent) * var(--vertical-indent)) var(--indent);
     background-color: rgb(var(--background-color));
   }
 
