--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,6 +4,7 @@
   --page-max-width: 1920px;
 
   --indent: min(8vw, calc(var(--page-max-width) * 0.08));
+  --vertical-indent: 1;
   --column-gap: calc(var(--indent) * 0.5);
   --gallery-gap: 1rem;
   --text-gap: 2rem;
@@ -101,7 +102,8 @@ section
 }
 
 :is(main, article) > section {
-  padding: var(--indent);
+  padding: calc(var(--indent) * var(--vertical-indent)) var(--indent);
+  // padding: var(--indent);
 }
 
 [data-component="columns"] {
