--- a/src/components/form/fieldset.astro
+++ b/src/components/form/fieldset.astro
@@ -12,7 +12,7 @@ const components: Record<string, any> = {};
 const componentImports = import.meta.glob(
   [
     "/src/mws-astro/src/components/form/**/*.jsx",
-    "/src/mws-astro/src/components/form/**/*.astro"
+    "/src/mws-astro/src/components/form/**/*.astro",
   ],
   {
     eager: true,
@@ -56,6 +56,7 @@ Object.entries(componentImports).forEach(([path, obj]: [string, any]) => {
   fieldset {
     display: flex;
     flex-direction: column;
+    gap: var(--text-gap);
     margin-top: 1.5rem;
     margin-bottom: 1rem;
     border-radius: var(--border-radius);
