--- a/src/components/form/form.astro
+++ b/src/components/form/form.astro
@@ -88,10 +88,14 @@ const background = convertColorString(background_color);
 </section>
 
 <style>
-  .form form {
+  form {
     display: flex;
     flex-direction: column;
     gap: var(--text-gap);
+
+    --placeholder-color: var(--text-color) / 0.8;
+    --form-border: 1px solid rgb(var(--text-color) / 0.6);
+    --form-background: var(--text-color) / 0.05;
   }
 
   input[type="submit"] {
