--- a/src/components/map/map.astro
+++ b/src/components/map/map.astro
@@ -90,8 +90,8 @@ const id = "map-" + key;
       const styleEl = mapElement.parentElement?.querySelector(
         ":scope > script.map-style"
       );
-      const { styles } = styleEl?.innerHTML
-        ? JSON.parse(styleEl?.innerHTML)
+      const styles = styleEl?.innerHTML
+        ? JSON.parse(styleEl?.innerHTML)?.styles
         : undefined;
 
       const loader = new Loader({
@@ -112,13 +112,15 @@ const id = "map-" + key;
           lng: Number(mapElement.dataset?.lng),
         };
 
-        const map = new Map(mapElement, {
+        const mapOptions: google.maps.MapOptions = {
           center: position,
           zoom: Number(mapElement.dataset?.zoom),
           mapTypeId: mapElement.dataset?.mapType,
-          styles,
           mapId: mapElement.dataset?.mapId,
-        });
+          styles,
+        };
+
+        const map = new Map(mapElement, mapOptions);
 
         if ("marker" in mapElement.dataset) {
           new Marker({
