Type fixes for astro check

--- a/src/shared/astro/Imgix.astro
+++ b/src/shared/astro/Imgix.astro
@@ -2,6 +2,11 @@
 import ImgixClient from "@imgix/js-core";
 import preferences from "@data/preferences.json";
 
+type IxOptions = {
+  domain: string;
+  token: string;
+};
+
 type cropOptions =
   | "center"
   | "top"
@@ -57,12 +62,34 @@ export interface Props {
   placeholder?: boolean;
 }
 
-var ix: ImgixClient | undefined = preferences.API.imgix?.domain
-  ? new ImgixClient({
-      domain: preferences.API.imgix?.domain,
-      secureURLToken: preferences.API.imgix?.token,
-    })
-  : undefined;
+var ix: ImgixClient | undefined = undefined;
+
+// @ts-ignore
+// var ix: ImgixClient | undefined = preferences.API.imgix?.domain
+//   ? new ImgixClient({
+//       domain: preferences.API.imgix?.domain,
+//       secureURLToken: preferences.API.imgix?.token,
+//     })
+//   : undefined;
+
+// if ("imgix" in preferences?.API && "domain" in preferences.API.imgix && "token" in preferences.API.imgix) {
+//   let ixOptions: IxOptions = (preferences.API.imgix as IxOptions);
+//   ix = new ImgixClient({domain: preferences.API.imgix.domain, })
+// }
+
+let ixprefs: IxOptions = preferences?.API?.imgix;
+if (
+  ixprefs &&
+  "domain" in ixprefs &&
+  typeof ixprefs.domain == "string" &&
+  "token" in ixprefs &&
+  typeof ixprefs.token == "string"
+) {
+  ix = new ImgixClient({
+    domain: ixprefs.domain,
+    secureURLToken: ixprefs.token,
+  });
+}
 
 const {
   image,
